--- a/src/main/resources/assets/quark/lang/en_us.json
+++ b/src/main/resources/assets/quark/lang/en_us.json
@@ -1040,6 +1040,8 @@
 	"block.quark.glow_shroom_ring": "Glow Shroom Ring",
 	"block.quark.potted_glow_lichen_growth": "Potted Glow Lichen",
 	"block.quark.potted_glow_shroom": "Potted Glow Shroom",
+	
+	"biome.quark.glimmering_weald": "Glimmering Weald"
 
 
 
