--- a/src/main/resources/assets/quark/lang/ja_jp.json
+++ b/src/main/resources/assets/quark/lang/ja_jp.json
@@ -57,6 +57,7 @@
 	"quark.gui.celebration.adrian": "誕生日おめでとう、Adrian！",
 	"quark.gui.celebration.train": "誕生日おめでとう、Train！",
 	"quark.gui.celebration.zemmy": "誕生日おめでとう、Zemmy！",
+	"quark.gui.celebration.mat": "誕生日おめでとう、MehVahdJukaar!",
 
 	"quark.gui.celebration.iad": "世界アセクシャルの日です！",
 	"quark.gui.celebration.iad2": "インターセックス啓発デーです！",
@@ -168,6 +169,9 @@
 	"quark.camera.info": "［%sでカメラモードを終了、ENTERで撮影］",
 	"quark.camera.reset": "設定をリセット（スニークする必要があります）",
 	"quark.camera.greetings": "%sからこんにちは！",
+
+	"death.attack.quark.pickarang": "%1$sは%2$sのピッケランが戻ってきたことに驚愕した",
+	"death.attack.quark.pickarang.item": "%1$sは%2$sの%3$sが戻ってきたことに驚愕した",
 
 	"quark.jei.makes_copy": "コピーを作成",
 	"quark.jei.any_enchanted": "いずれかのエンチャントされたアイテム",
@@ -303,8 +307,8 @@
 
 	"quark.keybind.change_hotbar": "ホットバーの交換",
 	"quark.keybind.lock_rotation": "設置方向の固定",
-	"quark.keybind.sort_container": "ターゲットのインベントリを整理する",
-	"quark.keybind.sort_player": "プレイヤーのインベントリを整理する",
+	"quark.keybind.sort_container": "ターゲットのインベントリを整理",
+	"quark.keybind.sort_player": "プレイヤーのインベントリを整理",
 	"quark.keybind.transfer_extract": "アイテムを取り出す",
 	"quark.keybind.transfer_insert": "アイテムをしまう",
 	"quark.keybind.patreon_emote.dance": "ダンス（Patreon）",
@@ -315,8 +319,8 @@
 	"quark.keybind.patreon_emote.zombie": "ゾンビ（Patreon）",
 	"quark.keybind.back": "戻る",
 	"quark.keybind.camera_mode": "カメラモード",
-	"quark.keybind.narrator_readout": "ナレーターの読み上げ",
-	"quark.keybind.narrator_full_readout": "すべてのナレーターの読み上げ",
+	"quark.keybind.narrator_readout": "音声読み上げ",
+	"quark.keybind.narrator_full_readout": "すべて読み上げ",
 	"quark.keybind.shift_lock": "Shiftのロック",
 	"quark.keybind.autorun": "自動歩行",
 	"quark.keybind.variant_selector": "種類セレクタ",
@@ -352,7 +356,7 @@
 	"quark.subtitles.foxhound_hurt": "フォックスハウンドがダメージを受ける",
 	"quark.subtitles.foxhound_shake": "フォックスハウンドが唸る",
 	"quark.subtitles.foxhound_eat": "フォックスハウンドが身震いをする",
-	"quark.subtitles.foxhound_crackle": "フォックスハウンドからパチパチと音がする",
+	"quark.subtitles.foxhound_crackle": "フォックスハウンドが燃える",
 	"quark.subtitles.crab_die": "殻が砕ける",
 	"quark.subtitles.crab_hurt": "殻が欠ける",
 	"quark.subtitles.crab_scuttle": "カニが鳴く",
@@ -390,7 +394,7 @@
 	"quark.subtitles.ambient.fire": "焚き火がパチパチと鳴る",
 	"quark.subtitles.ambient.clock": "時計の秒針がカチカチと鳴る",
 	"quark.subtitles.ambient.crickets": "コオロギの鳴き声",
-	"quark.subtitles.ambient.chatter": "にぎやかな喋り声",
+	"quark.subtitles.ambient.chatter": "にぎやかな話し声",
 
 	"quark.emote.wave": "手を振る",
 	"quark.emote.yes": "はい",
@@ -426,7 +430,6 @@
 	"quark.misc.bad_saturation3": "疑問のある配給品",
 	"quark.misc.bad_saturation4": "不味いおやつ",
 	"quark.misc.bad_saturation5": "危険なほど刺激的",
-	"quark.misc.mod_disabled": "無効化されています。%sをインストールして有効化します。",
 	"quark.misc.repaired": "（修繕済み）",
 	"quark.misc.celebration": "VazkiiのModの10周年を祝して（2021）",
 	"quark.misc.enchantment_with_actual_level": "%s（%s）",
@@ -476,9 +479,9 @@
 	"quark.misc.you_came_to_the_wrong_neighborhood.15": "それは私の名前ではありません",
 	"quark.misc.you_came_to_the_wrong_neighborhood.16": "それは私の名前ではありません",
 
-	"quark.misc.reloaded0": "Quarkの設定が再読み込みされました。",
-	"quark.misc.reloaded1": "- レシピなどが変わる変更をした場合は、/reloadを実行してください。",
-	"quark.misc.reloaded2": "- 変更が適用されない場合は、ゲームを再起動してみてください。",
+	"quark.misc.reloaded0": "Quarkの設定が再読み込みされました",
+	"quark.misc.reloaded1": "- レシピなどが変わる変更をした場合は、/reloadを実行してください",
+	"quark.misc.reloaded2": "- 変更が適用されない場合は、ゲームを再起動してみてください",
 
 	"quark.container.feeding_trough": "餌箱",
 
@@ -516,7 +519,6 @@
 	"item.quark.moss_paste": "練り苔",
 	"item.quark.backpack": "バックパック",
 	"item.quark.ravager_hide": "ラヴェジャーの皮",
-	"item.quark.soul_compass": "ソウルコンパス",
 	"item.quark.bottled_cloud": "雲入りの瓶",
 	"item.quark.flamerang": "フラメラン",
 	"item.quark.seed_pouch": "種入れ",
@@ -531,7 +533,7 @@
 	"item.quark.egg_parrot_blue": "青色のオウムの卵",
 	"item.quark.egg_parrot_green": "緑色のオウムの卵",
 	"item.quark.egg_parrot_yellow_blue": "青緑色のオウムの卵",
-	"item.quark.egg_parrot_grey": "灰色のオウムの卵",
+	"item.quark.egg_parrot_gray": "灰色のオウムの卵",
 	"item.quark.music_disc_endermosh": "レコード",
 	"item.quark.music_disc_endermosh.desc": "Kain Vinosec - Endermosh",
 	"item.quark.music_disc_drips": "アンビエンスレコード",
@@ -547,7 +549,7 @@
 	"item.quark.music_disc_clock": "アンビエンスレコード",
 	"item.quark.music_disc_clock.desc": "秒針の音",
 	"item.quark.music_disc_crickets": "アンビエンスレコード",
-	"item.quark.music_disc_crickets.desc": "コオロギの声",
+	"item.quark.music_disc_crickets.desc": "コオロギの鳴き声",
 	"item.quark.music_disc_chatter": "アンビエンスレコード",
 	"item.quark.music_disc_chatter.desc": "人々の話し声",
 	"item.quark.torch_arrow": "松明の矢",
@@ -802,16 +804,16 @@
 	"block.quark.iron_ladder": "鉄のはしご",
 	"block.quark.cactus_block": "サボテンの束",
 	"block.quark.chorus_fruit_block": "コーラスフルーツの束",
-	"block.quark.cocoa_beans_sack": "カカオ豆入り袋",
-	"block.quark.berry_sack": "スイートベリー入り袋",
-	"block.quark.glowberry_sack": "グロウベリー入り袋",
-	"block.quark.golden_apple_crate": "金のリンゴ入り木箱",
-	"block.quark.gunpowder_sack": "火薬入り袋",
-	"block.quark.nether_wart_sack": "ネザーウォート入り袋",
-	"block.quark.potato_crate": "ジャガイモ入り木箱",
-	"block.quark.apple_crate": "リンゴ入り木箱",
-	"block.quark.beetroot_crate": "ビートルート入り木箱",
-	"block.quark.carrot_crate": "ニンジン入り木箱",
+	"block.quark.cocoa_beans_sack": "カカオ豆入りの袋",
+	"block.quark.berry_sack": "スイートベリー入りの袋",
+	"block.quark.glowberry_sack": "グロウベリー入りの袋",
+	"block.quark.golden_apple_crate": "金のリンゴ入りの木箱",
+	"block.quark.gunpowder_sack": "火薬入りの袋",
+	"block.quark.nether_wart_sack": "ネザーウォート入りの袋",
+	"block.quark.potato_crate": "ジャガイモ入りの木箱",
+	"block.quark.apple_crate": "リンゴ入りの木箱",
+	"block.quark.beetroot_crate": "ビートルート入りの木箱",
+	"block.quark.carrot_crate": "ニンジン入りの木箱",
 	"block.quark.stick_block": "棒の束",
 	"block.quark.dirty_glass": "汚れたガラス",
 	"block.quark.dirty_glass_pane": "汚れたガラス板",
@@ -1032,7 +1034,7 @@
 	"block.quark.iron_plate_vertical_slab": "鉄の板の縦ハーフブロック",
 	"block.quark.rusty_iron_plate_vertical_slab": "錆びた鉄の板の縦ハーフブロック",
 	"block.quark.pipe": "銅のパイプ",
-	"block.quark.encased_pipe": "ケース入り銅のパイプ",
+	"block.quark.encased_pipe": "ケース入りの銅のパイプ",
 	"block.quark.magnet": "磁石",
 	"block.quark.bonded_rabbit_hide": "ウサギの再生皮",
 	"block.quark.bonded_ravager_hide": "ラヴェジャーの再生皮",
@@ -1323,7 +1325,6 @@
 	"block.quark.carved_mud_bricks": "彫刻入りの泥レンガ",
 	"block.quark.mud_brick_lattice": "泥レンガの格子",
 	"block.quark.mud_pillar": "泥の柱",
-	"block.quark.cherry_vertical_slab": "サクラの縦ハーフブロック",
 	"block.quark.bamboo_vertical_slab": "竹の縦ハーフブロック",
 	"block.quark.bamboo_mosaic_vertical_slab": "竹細工の縦ハーフブロック",
 	"block.quark.bamboo_post": "竹の杭",
@@ -1376,7 +1377,7 @@
 	"block.quark.ancient_sapling": "トネリコの苗木",
 	"block.quark.ancient_leaf_carpet": "トネリコの葉のカーペット",
 	"block.quark.ancient_hedge": "トネリコの葉の生垣",
-	"block.quark.golden_carrot_crate": "金のニンジン入り木箱",
+	"block.quark.golden_carrot_crate": "金のニンジン入りの木箱",
 	"block.quark.blossom_hanging_sign": "イペの吊り看板",
 	"block.quark.azalea_hanging_sign": "ツツジの吊り看板",
 	"block.quark.ancient_hanging_sign": "トネリコの吊り看板",
@@ -1523,7 +1524,7 @@
 	"advancements.quark.mine_fed_toretoise.description": "グロウベリーを食べて鉱石を再生させた後、オアトイズを採掘する",
 	"advancements.quark.throw_pickarang.title": "どういうわけか、ピッケランが戻ってきた",
 	"advancements.quark.throw_pickarang.description": "ピッケランを投げる",
-	"advancements.quark.retreive_flamerang.title": "空を飛べ、火の鳥よ",
+	"advancements.quark.retreive_flamerang.title": "Fly to the Sky, Fire Bird",
 	"advancements.quark.retreive_flamerang.description": "フラメランを投げ、それが燃えているアイテムを運んでいる間に取り戻す",
 	"advancements.quark.overlevel_enchant.title": "限界突破",
 	"advancements.quark.overlevel_enchant.description": "古代の書物を使用してエンチャントレベルの限界を超える",
@@ -1534,10 +1535,10 @@
 	"advancements.quark.get_bottled_cloud.title": "クラウドストレージ",
 	"advancements.quark.get_bottled_cloud.description": "雲を瓶に入れる",
 	"advancements.quark.apply_color_rune.title": "栄光ある威光",
-	"advancements.quark.apply_color_rune.description": "金床でエンチャントされたアイテムにルーンを適用する",
+	"advancements.quark.apply_color_rune.description": "鍛冶台でエンチャントされたアイテムにルーンエッチングを施す",
 	"advancements.quark.wear_full_rainbow.title": "虹の味",
 	"advancements.quark.wear_full_rainbow.description": "虹色のルーンが適用された防具一式を装備する",
-	"advancements.quark.throw_parrot_egg.title": "ただのオウム",
+	"advancements.quark.throw_parrot_egg.title": "コウノトリの忘れ物",
 	"advancements.quark.throw_parrot_egg.description": "オウムにビートルートの種を与え、産んだ卵を投げる",
 	"advancements.quark.pathfinder_map_center.title": "明日への道",
 	"advancements.quark.pathfinder_map_center.description": "開拓地図のX印に到達する",
@@ -1546,19 +1547,19 @@
 	"advancements.quark.ancient_apple_overlevel.title": "少し変わった果実",
 	"advancements.quark.ancient_apple_overlevel.description": "自身のレベルが100以上のときにエンチャントの果実を食べる",
 	"advancements.quark.get_all_blossom_saplings.title": "花開く",
-	"advancements.quark.get_all_blossom_saplings.description": "すべてのイペの苗木を手に入れる",
-	"advancements.quark.get_all_corundum.title": "コランダムでコマッタム",
+	"advancements.quark.get_all_blossom_saplings.description": "すべての種類のイペの苗木を手に入れる",
+	"advancements.quark.get_all_corundum.title": "困難混乱コランダム",
 	"advancements.quark.get_all_corundum.description": "すべての色のコランダムの塊を手に入れる",
 	"advancements.quark.use_viaduct.title": "私を追いかけて",
 	"advancements.quark.use_viaduct.description": "繋がったマイアライトクリスタルの端にエンダーパールを投げ、通過する",
 	"advancements.quark.tame_foxhound.title": "火遊び",
 	"advancements.quark.tame_foxhound.description": "火炎耐性を受けている状態でフォックスハウンドに石炭を渡し、手懐ける",
-	"advancements.quark.foxhound_speed_up_furnace.title": "炎の犬を寝かせる",
-	"advancements.quark.foxhound_speed_up_furnace.description": "フォックスハウンドをかまどの上で寝かせてかまどを高速化させる",
+	"advancements.quark.foxhound_speed_up_furnace.title": "炎の犬を寝かせておいて",
+	"advancements.quark.foxhound_speed_up_furnace.description": "フォックスハウンドをかまどの上で寝かせ、かまどを加速させる",
 	"advancements.quark.shiba_help.title": "街を塗りつぶせ",
-	"advancements.quark.shiba_help.description": "松明を持って柴犬の助けを借り、暗い場所を掃除する",
-	"advancements.quark.poison_baby.title": "永遠の若さ",
-	"advancements.quark.poison_baby.description": "青くなったジャガイモで子どもの動物を成功裏に毒する",
+	"advancements.quark.shiba_help.description": "松明を持ち、柴犬の助けを借りて暗い場所を掃除する",
+	"advancements.quark.poison_baby.title": "いつまでも若く",
+	"advancements.quark.poison_baby.description": "子どもの動物に青くなったジャガイモを与え、成長を妨げる",
 	"advancements.quark.crab_in_a_bucket.title": "カニ捕まえた！",
 	"advancements.quark.crab_in_a_bucket.description": "バケツでカニを捕まえる"
 }
