--- a/src/main/resources/assets/quark/lang/ja_jp.json
+++ b/src/main/resources/assets/quark/lang/ja_jp.json
@@ -348,7 +348,7 @@
 	"quark.subtitles.throw_pickarang": "ピッケランが投げられる",
 	"quark.subtitles.clank_pickarang": "ピッケランがガチャンと音を立てる",
 	"quark.subtitles.spark_pickarang": "ピッケランが反射される",
-	"quark.subtitles.pickup_pickarang": "ピッケランを受け取る",
+	"quark.subtitles.pickup_pickarang": "ピッケランを回収する",
 	"quark.subtitles.michael_here": "ミカエルはここにいます",
 	"quark.subtitles.foxhound_ambient": "フォックスハウンドが燃え上がる",
 	"quark.subtitles.foxhound_death": "フォックスハウンドが崩れ去る",
@@ -1522,10 +1522,10 @@
 	"advancements.quark.mine_toretoise.description": "ツルハシを使用して野生のオアトイズを採掘する",
 	"advancements.quark.mine_fed_toretoise.title": "僕たちは裕福だ！",
 	"advancements.quark.mine_fed_toretoise.description": "グロウベリーを食べて鉱石を再生させた後、オアトイズを採掘する",
-	"advancements.quark.throw_pickarang.title": "どういうわけか、ピッケランが戻ってきた",
+	"advancements.quark.throw_pickarang.title": "どういう訳か、ピッケランが戻ってきた",
 	"advancements.quark.throw_pickarang.description": "ピッケランを投げる",
 	"advancements.quark.retreive_flamerang.title": "Fly to the Sky, Fire Bird",
-	"advancements.quark.retreive_flamerang.description": "フラメランを投げ、それが燃えているアイテムを運んでいる間に取り戻す",
+	"advancements.quark.retreive_flamerang.description": "燃えているアイテムを持ち帰っているフラメランを回収する",
 	"advancements.quark.overlevel_enchant.title": "限界突破",
 	"advancements.quark.overlevel_enchant.description": "古代の書物を使用してエンチャントレベルの限界を超える",
 	"advancements.quark.instamine_deepslate.title": "瞬間限界突破",
