--- a/src/main/resources/assets/quark/lang/ja_jp.json
+++ b/src/main/resources/assets/quark/lang/ja_jp.json
@@ -346,9 +346,9 @@
 	"quark.subtitles.kill_stoneling": "ストーンリングが破壊される",
 	"quark.subtitles.purr": "ストーンリングが満足げな様子を示す",
 	"quark.subtitles.throw_pickarang": "ピッケランが投げられる",
-	"quark.subtitles.clank_pickarang": "ピッケランがガチャンと音を立てる",
-	"quark.subtitles.spark_pickarang": "ピッケランが反射される",
-	"quark.subtitles.pickup_pickarang": "ピッケランを回収する",
+	"quark.subtitles.clank_pickarang": "ピッケランが金属音を立てる",
+	"quark.subtitles.spark_pickarang": "ピッケランが跳ね返る",
+	"quark.subtitles.pickup_pickarang": "ピッケランが回収される",
 	"quark.subtitles.michael_here": "ミカエルはここにいます",
 	"quark.subtitles.foxhound_ambient": "フォックスハウンドが燃え上がる",
 	"quark.subtitles.foxhound_death": "フォックスハウンドが崩れ去る",
@@ -441,7 +441,7 @@
 	"quark.misc.opened_screen": "%sの画面を開きました",
 	"quark.misc.trash_item": "右クリックでアイテムを破棄",
 	"quark.misc.insert_shulker_box": "右クリックでアイテムを挿入",
-	"quark.misc.merge_shulker_box": "右クリックで内容をダンプ",
+	"quark.misc.merge_shulker_box": "右クリックでアイテムを移動",
 	"quark.misc.equip_armor": "右クリックで装備",
 	"quark.misc.open_shulker": "右クリックで開く",
 	"quark.misc.my_son": "二度と私と息子に話しかけないでください。",
@@ -452,9 +452,9 @@
 	"quark.misc.shared_item": "%sはアイテムを共有しました：",
 	"quark.misc.configure_quark_here": "Quarkの設定はこちら！",
 	"quark.misc.only_one_quill": "開拓者の羽根ペンは既に検索中です…",
-	"quark.misc.quill_finished": "開拓地図が完成しました。",
-	"quark.misc.quill_failed": "開拓者の羽根ペンはバイオームを見つけることができませんでした。",
-	"quark.misc.quill_retry": "開拓者の羽根ペンはバイオームを見つけることができませんでした。他の場所で試してください。",
+	"quark.misc.quill_finished": "開拓地図が完成しました",
+	"quark.misc.quill_failed": "開拓者の羽根ペンはバイオームを見つけることができませんでした",
+	"quark.misc.quill_retry": "開拓者の羽根ペンはバイオームを見つけることができませんでした。他の場所で試してください",
 	"quark.misc.quill_blank": "空",
 	"quark.misc.quill_searching": "検索中",
 	"quark.misc.variant_tooltip_hold_shift": "（SHIFTで種類を表示）",
@@ -479,9 +479,9 @@
 	"quark.misc.you_came_to_the_wrong_neighborhood.15": "それは私の名前ではありません",
 	"quark.misc.you_came_to_the_wrong_neighborhood.16": "それは私の名前ではありません",
 
-	"quark.misc.reloaded0": "Quarkの設定が再読み込みされました。",
-	"quark.misc.reloaded1": "- レシピなどが変わる変更を行った場合は、/reloadを実行してください。",
-	"quark.misc.reloaded2": "- 変更が適用されない場合は、ゲームを再起動してみてください。",
+	"quark.misc.reloaded0": "Quarkの設定が再読み込みされました",
+	"quark.misc.reloaded1": "- レシピなどが変わる変更を行った場合は、/reloadを実行してください",
+	"quark.misc.reloaded2": "- 変更が適用されない場合は、ゲームを再起動してみてください",
 
 	"quark.container.feeding_trough": "餌箱",
 
@@ -1512,7 +1512,7 @@
 	"advancements.quark.watcher_center.description": "エンダーウォッチャーの中心を見る",
 	"advancements.quark.crawl_in_hollow_log.title": "俺の樹皮の中で這い回ってる",
 	"advancements.quark.crawl_in_hollow_log.description": "中空の原木の中を這う",
-	"advancements.quark.get_forgotten_hat.title": "博物館にあるはず",
+	"advancements.quark.get_forgotten_hat.title": "博物館にあるべき",
 	"advancements.quark.get_forgotten_hat.description": "忘れ去られし者を倒し、帽子を奪う",
 	"advancements.quark.get_diamond_heart.title": "心の形",
 	"advancements.quark.get_diamond_heart.description": "ストーンリングにスニークしながら近づき、殻を破って心を手に入れる",
@@ -1525,7 +1525,7 @@
 	"advancements.quark.throw_pickarang.title": "どういう訳か、ピッケランが戻ってきた",
 	"advancements.quark.throw_pickarang.description": "ピッケランを投げる",
 	"advancements.quark.retreive_flamerang.title": "Fly to the Sky, Fire Bird",
-	"advancements.quark.retreive_flamerang.description": "燃えているアイテムを持ち帰っているフラメランを回収する",
+	"advancements.quark.retreive_flamerang.description": "燃えているアイテムを持ち帰ったフラメランを回収する",
 	"advancements.quark.overlevel_enchant.title": "限界突破",
 	"advancements.quark.overlevel_enchant.description": "古代の書物を使用してエンチャントレベルの限界を超える",
 	"advancements.quark.instamine_deepslate.title": "瞬間限界突破",
@@ -1548,7 +1548,7 @@
 	"advancements.quark.ancient_apple_overlevel.description": "自身のレベルが100以上のときにエンチャントの果実を食べる",
 	"advancements.quark.get_all_blossom_saplings.title": "花開く",
 	"advancements.quark.get_all_blossom_saplings.description": "すべての種類のイペの苗木を手に入れる",
-	"advancements.quark.get_all_corundum.title": "困難混乱コランダム",
+	"advancements.quark.get_all_corundum.title": "混乱困難コランダム",
 	"advancements.quark.get_all_corundum.description": "すべての色のコランダムの塊を手に入れる",
 	"advancements.quark.use_viaduct.title": "私を追いかけて",
 	"advancements.quark.use_viaduct.description": "繋がったマイアライトクリスタルの端にエンダーパールを投げ、通過する",
